# notes-demo

./: Cargo.toml  readme.md
src/: lib.rs  router.rs
src/controllers/: mod.rs  note_controller.rs
src/models/: note.rs
src/services/: mod.rs  notes_service.rs
src/template_models/: mod.rs  notes.rs
templates/: layout.html
templates/notes/: edit.html  index.html  new.html  show.html
