[package]
name = "notes-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.132"
askama = "0.11.0"
pulldown-cmark = "0.9.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tide = {git = "https://github.com/logankeenan/tide.git", branch = "wasm" }
surf = { version = "2.3.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tide = { git = "https://github.com/logankeenan/tide.git", features = ["wasm"], branch = "wasm", default-features = false }
surf = { version = "2.3.2", default-features = false, features = ["wasm-client"] }
